[gd_scene load_steps=2 format=3 uid="uid://bdrym6v6skgi7"]

[ext_resource type="Script" path="res://multiplyer-control/multiplayerController.gd" id="1_2y47s"]

[node name="control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
script = ExtResource("1_2y47s")

[node name="join" type="Button" parent="."]
layout_mode = 0
offset_left = 118.0
offset_top = 160.0
offset_right = 175.0
offset_bottom = 191.0
text = "Join
"

[node name="host" type="Button" parent="."]
layout_mode = 0
offset_left = 187.0
offset_top = 161.0
offset_right = 259.0
offset_bottom = 192.0
text = "Host
"

[node name="start_game" type="Button" parent="."]
layout_mode = 0
offset_left = 268.0
offset_top = 162.0
offset_right = 381.0
offset_bottom = 193.0
text = "Start Game"

[node name="playername" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 116.0
offset_right = 383.0
offset_bottom = 147.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 122.0
offset_top = 83.0
offset_right = 221.0
offset_bottom = 109.0
text = "Player Name"

[connection signal="button_down" from="join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="start_game" to="." method="_on_start_game_button_down"]
